--- a/templates/base3.html.twig
+++ b/templates/base3.html.twig
@@ -33,158 +33,9 @@
 {% block body %}
 
 
-{% block con %}
-    <header class="header-2">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div class="header-top">
-                        <div class="logo-area">
-                            <a href="home"><img src="{{ asset('build/final/images/logo-2.png') }}" alt=""></a>
-                        </div>
-                        <div class="header-top-toggler">
-                            <div class="header-top-toggler-button"></div>
-                        </div>
-                        <div class="top-nav">
-                            <div class="dropdown header-top-account">
-                                <a href="#" class="account-button">My Account</a>
-                                <div class="account-card">
-                                    <div class="header-top-account-info">
-                                        <a href="#" class="account-thumb">
-                                            <img src="{{ asset("images\photo\04e3d5b4af0a62a7a5e0b5f997db9a84.jpg") }}" class="img-fluid" alt="">
-                                        </a>
-                                        <div class="account-body">
-                                            <h5><a href="#">{{ app.user.firstname}} {{ app.user.lastname }}</a></h5>
-                                            <span class="mail">{{ app.user.email }}</span>
-                                        </div>
-                                    </div>
-                                    <ul class="account-item-list">
-                                        <li><a href="#"><span class="ti-user"></span>Compte</a></li>
-                                        <li><a href="{{ path('app_logout') }}"><span class="ti-power-off"></span>Déconnexion</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <nav class="navbar navbar-expand-lg cp-nav-2">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav">
-                                <li class="menu-item active"><a title="Home" href="home-1.html">Accueil</a></li>
-                                <li class="menu-item dropdown">
-                                    <a href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Offres de travail</a>
-                                    <ul  class="dropdown-menu">
-                                        <li class="menu-item"><a  href="/annonce">Rechercher Emploi</a></li>
-                                    </ul>
-                                </li>
-
-                                <li class="menu-item dropdown">
-                                    <a href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Dashboard</a>
-                                    <ul class="dropdown-menu">
-                                        <li class="menu-item"><a  href="/user">Dashboard</a></li>
-                                        <li class="menu-item"><a  href="/travailleur/modifier">Modifier Profile</a></li>
-                                        <li class="menu-item"><a  href="/cv">Modifier CV</a></li>
-                                        <li class="menu-item"><a  href="/cv">Voir CV</a></li>
-                                        <li class="menu-item"><a  href="dashboard-applied.html">Applications postulés</a></li>
-                                    </ul>
-                                </li>
-
-                                <li class="menu-item dropdown">
-                                    <a title="" href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Pages</a>
-                                    <ul  class="dropdown-menu">
-                                        <li class="menu-item"><a href="about-us.html">À propos de nous</a></li>
-                                        <li class="menu-item"><a href="how-it-work.html">Comment ça fonctionne</a></li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item post-job"><a href="post-job.html"><i class="fas fa-plus"></i>Rechercher Emploi</a></li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </header>
-
-{% endblock %}
-
-{%block header%}
-    <header class="header-2">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div class="header-top">
-                        <div class="logo-area">
-                            <a href="home"><img src="{{ asset('build/final/images/logo-2.png') }}" alt=""></a>
-                        </div>
-                        <div class="header-top-toggler">
-                            <div class="header-top-toggler-button"></div>
-                        </div>
-                        <div class="top-nav">
-                            <div class="dropdown header-top-account">
-                                <a href="#" class="account-button">My Account</a>
-                                <div class="account-card">
-                                    <div class="header-top-account-info">
-                                        <a href="#" class="account-thumb">
-                                            <img src="{{ asset("images\photo\04e3d5b4af0a62a7a5e0b5f997db9a84.jpg") }}" class="img-fluid" alt="">
-                                        </a>
-                                        <div class="account-body">
-                                            <h5><a href="#">{{ app.user.firstname}} {{ app.user.lastname }}</a></h5>
-                                            <span class="mail">{{ app.user.email }}</span>
-                                        </div>
-                                    </div>
-                                    <ul class="account-item-list">
-                                        <li><a href="#"><span class="ti-user"></span>Compte</a></li>
-                                        <li><a href="{{ path('app_logout') }}"><span class="ti-power-off"></span>Déconnexion</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <nav class="navbar navbar-expand-lg cp-nav-2">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav">
-                                <li class="menu-item active"><a title="Home" href="home-1.html">Accueil</a></li>
-                                <li class="menu-item dropdown">
-                                    <a href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Offres de travail</a>
-                                    <ul  class="dropdown-menu">
-                                        <li class="menu-item"><a  href="/annonce">Rechercher Emploi</a></li>
-                                    </ul>
-                                </li>
-
-                                <li class="menu-item dropdown">
-                                    <a href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Dashboard</a>
-                                    <ul class="dropdown-menu">
-                                        <li class="menu-item"><a  href="/user">Dashboard</a></li>
-                                        <li class="menu-item"><a  href="/travailleur/modifier">Modifier Profile</a></li>
-                                        <li class="menu-item"><a  href="/cv">Modifier CV</a></li>
-                                        <li class="menu-item"><a  href="/cv">Voir CV</a></li>
-                                        <li class="menu-item"><a  href="dashboard-applied.html">Applications postulés</a></li>
-                                    </ul>
-                                </li>
-
-                                <li class="menu-item dropdown">
-                                    <a title="" href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Pages</a>
-                                    <ul  class="dropdown-menu">
-                                        <li class="menu-item"><a href="about-us.html">À propos de nous</a></li>
-                                        <li class="menu-item"><a href="how-it-work.html">Comment ça fonctionne</a></li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item post-job"><a href="post-job.html"><i class="fas fa-plus"></i>Rechercher Emploi</a></li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </header>
-{% endblock %}
 
 {% block sidebar %}
+    <div class="dashboard-sidebar">
     <div class="dashboard-sidebar">
         <div class="user-info">
             <div class="thumb">
@@ -197,14 +48,11 @@
         </div>
         <div class="dashboard-menu">
             <ul>
-                <li class ="active"> <i class="fas fa-user"></i><a href="modifier">Modifier Profile</a></li>
-                <li><i class="fas fa-file-alt"></i><a href="cv">CV</a></li>
-                <li><i class="fas fa-edit"></i><a href="modifierCV">Modifier CV</a></li>
-                <li><i class="fas fa-plus-square"></i><a href="/travailleur/Publier">Publier demande d'emploi</a></li>
+                <li class ="active"> <i class="fas fa-user"></i><a href="modifier">Les utilisateurs</a></li>
+                <li><i class="fas fa-file-alt"></i><a href="cv">Les annonces</a></li>
+                <li><i class="fas fa-edit"></i><a href="modifierCV">Les Demandes</a></li>
+                <li><i class="fab fa-facebook-messenger"></i><a href="/travailleur/Publier">Les messages</a></li>
                 <li><i class="fas fa-heart"></i><a href="MesAnnonces">Liste des annonces</a></li>
-                <li><i class="fas fa-check-square"></i><a href="/travailleur/GererOffres">Liste de demandes</a></li>
-                <li><i class="fab fa-facebook-messenger"></i><a href="/travailleur/GererOffres">Messages</a></li>
-
             </ul>
             <ul class="delete">
                 <li><i class="fas fa-power-off"></i><a href="{{ path('app_logout') }}">Déconnexion</a></li>
