--- a/templates/test/passTest.html.twig
+++ b/templates/test/passTest.html.twig
@@ -1,12 +1,5 @@
-{% extends 'base3.html.twig' %}
+{% extends 'base.html.twig' %}
 
-{% block title %}Test{% endblock %}
-{% block head %}
-{% endblock %}
-{% block con %}
-{% endblock %}
-{%block header%}
-{% endblock %}
 
 {% block body %}
     <script>
