--- a/templates/back.html.twig
+++ b/templates/back.html.twig
@@ -57,26 +57,15 @@
                                     <span class="nk-menu-text">Dashboard</span>
                                 </a>
                             </li>
-                            <li class="nk-menu-item has-sub">
-                                <a href="#" class="nk-menu-link nk-menu-toggle">
+                            <li class="nk-menu-item">
+                                <a href="index.html" class="nk-menu-link">
                                         <span class="nk-menu-icon">
-                                            <em class="icon ni ni-users-fill">
+                                            <em class="icon ni ni-dashboard-fill">
 
                                             </em>
-                                            <span class="nk-menu-text">Lead</span>
+                                        </span>
+                                    <span class="nk-menu-text">utilisateurs</span>
                                 </a>
-                                <ul class="nk-menu-sub">
-                                    <li class="nk-menu-item">
-                                        <a href="people.html" class="nk-menu-link">
-                                            <span class="nk-menu-text">People</span>
-                                        </a>
-                                    </li>
-                                    <li class="nk-menu-item">
-                                        <a href="organizations.html" class="nk-menu-link">
-                                            <span class="nk-menu-text">Organization</span>
-                                        </a>
-                                    </li>
-                                </ul>
                             </li>
                             <li class="nk-menu-item">
                                 <a href="customer-list.html" class="nk-menu-link">
@@ -85,7 +74,7 @@
 
                                             </em>
                                         </span>
-                                    <span class="nk-menu-text">Customers</span>
+                                    <span class="nk-menu-text">Annonces</span>
                                 </a>
                             </li>
                             <li class="nk-menu-item has-sub">
@@ -95,187 +84,28 @@
 
                                             </em>
                                         </span>
-                                    <span class="nk-menu-text">Sales</span>
+                                    <span class="nk-menu-text">Demandes de postulations</span>
                                 </a>
-                                <ul class="nk-menu-sub">
-                                    <li class="nk-menu-item">
-                                        <a href="invoices.html" class="nk-menu-link">
-                                            <span class="nk-menu-text">Invoices</span>
-                                        </a>
-                                    </li>
-                                    <li class="nk-menu-item">
-                                        <a href="payment.html" class="nk-menu-link">
-                                            <span class="nk-menu-text">Payment</span>
-                                        </a>
-                                    </li>
-                                    <li class="nk-menu-item">
-                                        <a href="recent-sale.html" class="nk-menu-link">
-                                            <span class="nk-menu-text">Recent Sale</span>
-                                        </a>
-                                    </li>
-                                    <li class="nk-menu-item">
-                                        <a href="estimates.html" class="nk-menu-link">
-                                            <span class="nk-menu-text">Estimates</span>
-                                        </a>
-                                    </li>
-                                    <li class="nk-menu-item">
-                                        <a href="expenses.html" class="nk-menu-link">
-                                            <span class="nk-menu-text">Expenses</span>
-                                        </a>
-                                    </li>
-                                </ul>
+                             
                             </li>
                             <li class="nk-menu-item has-sub">
                                 <a href="#" class="nk-menu-link nk-menu-toggle">
                                         <span class="nk-menu-icon">
                                             <em class="icon ni ni-tranx"></em>
                                         </span>
-                                    <span class="nk-menu-text">Transaction</span>
+                                    <span class="nk-menu-text">Messages</span>
                                 </a>
-                                <ul class="nk-menu-sub">
-                                    <li class="nk-menu-item">
-                                        <a href="deposit.html" class="nk-menu-link">
-                                            <span class="nk-menu-text">Recent Deposits</span>
-                                        </a>
-                                    </li>
-                                    <li class="nk-menu-item">
-                                        <a href="transaction.html" class="nk-menu-link">
-                                            <span class="nk-menu-text"> All Transaction</span>
-                                        </a>
-                                    </li>
-                                    <li class="nk-menu-item">
-                                        <a href="transfer-report.html" class="nk-menu-link">
-                                            <span class="nk-menu-text">Transfer Report</span>
-                                        </a>
-                                    </li>
-                                </ul>
+                        
                             </li>
                             <li class="nk-menu-item has-sub">
                                 <a href="#" class="nk-menu-link nk-menu-toggle">
                                         <span class="nk-menu-icon">
                                             <em class="icon ni ni-task-fill-c"></em>
                                         </span>
-                                    <span class="nk-menu-text">Task</span>
+                                    <span class="nk-menu-text">Réseau sociaux</span>
                                 </a>
-                                <ul class="nk-menu-sub">
-                                    <li class="nk-menu-item">
-                                        <a href="running-task.html" class="nk-menu-link">
-                                            <span class="nk-menu-text">Running Task</span>
-                                        </a>
-                                    </li>
-                                    <li class="nk-menu-item">
-                                        <a href="archive-task.html" class="nk-menu-link">
-                                            <span class="nk-menu-text">Archived Task</span>
-                                        </a>
-                                    </li>
-                                </ul>
+                                
                             </li>
-                            <li class="nk-menu-item has-sub">
-                                <a href="#" class="nk-menu-link nk-menu-toggle">
-                                        <span class="nk-menu-icon">
-                                            <em class="icon ni ni-coin"></em>
-                                        </span>
-                                    <span class="nk-menu-text">Account</span>
-                                </a>
-                                <ul class="nk-menu-sub">
-                                    <li class="nk-menu-item">
-                                        <a href="client-payment.html" class="nk-menu-link">
-                                            <span class="nk-menu-text">Client Payment</span>
-                                        </a>
-                                    </li>
-                                    <li class="nk-menu-item">
-                                        <a href="expense-management.html" class="nk-menu-link">
-                                            <span class="nk-menu-text">Expense Management</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="nk-menu-item has-sub">
-                                <a href="#" class="nk-menu-link nk-menu-toggle">
-                                        <span class="nk-menu-icon">
-                                            <em class="icon ni ni-truck">
-
-                                            </em>
-                                        </span>
-                                    <span class="nk-menu-text">Product Management</span>
-                                </a>
-                                <ul class="nk-menu-sub">
-                                    <li class="nk-menu-item">
-                                        <a href="products.html" class="nk-menu-link">
-                                            <span class="nk-menu-text">Products</span>
-                                        </a>
-                                    </li>
-                                    <li class="nk-menu-item">
-                                        <a href="warehouse.html" class="nk-menu-link">
-                                            <span class="nk-menu-text">Warehouse</span>
-                                        </a>
-                                    </li>
-                                    <li class="nk-menu-item">
-                                        <a href="product-transfer.html" class="nk-menu-link"><span
-                                                    class="nk-menu-text">Product Transfer</span></a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="nk-menu-item has-sub"><a href="#" class="nk-menu-link nk-menu-toggle"><span
-                                            class="nk-menu-icon"><em class="icon ni ni-growth-fill"></em></span><span
-                                            class="nk-menu-text">Report</span></a>
-                                <ul class="nk-menu-sub">
-                                    <li class="nk-menu-item"><a href="dealing-info.html" class="nk-menu-link"><span
-                                                    class="nk-menu-text">Dealing Info</span></a></li>
-                                    <li class="nk-menu-item"><a href="client-report.html" class="nk-menu-link"><span
-                                                    class="nk-menu-text">Client Report</span></a></li>
-                                    <li class="nk-menu-item"><a href="expense-report.html"
-                                                                class="nk-menu-link"><span class="nk-menu-text">Expense
-                                                    Report</span></a></li>
-                                </ul>
-                            </li>
-                            <li class="nk-menu-item"><a href="employee.html" class="nk-menu-link"><span
-                                            class="nk-menu-icon"><em class="icon ni ni-layers-fill"></em></span><span
-                                            class="nk-menu-text">Employees</span></a></li>
-                            <li class="nk-menu-item"><a href="projects.html" class="nk-menu-link"><span
-                                            class="nk-menu-icon"><em
-                                                class="icon ni ni-list-index-fill"></em></span><span
-                                            class="nk-menu-text">Projects</span></a></li>
-                            <li class="nk-menu-item has-sub"><a href="#" class="nk-menu-link nk-menu-toggle"><span
-                                            class="nk-menu-icon"><em class="icon ni ni-coins"></em></span><span
-                                            class="nk-menu-text">Payroll</span></a>
-                                <ul class="nk-menu-sub">
-                                    <li class="nk-menu-item"><a href="salary-grade.html" class="nk-menu-link"><span
-                                                    class="nk-menu-text">Salary grade</span></a></li>
-                                    <li class="nk-menu-item"><a href="employee-salary-list.html"
-                                                                class="nk-menu-link"><span class="nk-menu-text">Employee Salary
-                                                    List</span></a></li>
-                                </ul>
-                            </li>
-                            <li class="nk-menu-item"><a href="time-history.html" class="nk-menu-link"><span
-                                            class="nk-menu-icon"><em
-                                                class="icon ni ni-calendar-check-fill"></em></span><span
-                                            class="nk-menu-text">Attendance</span></a></li>
-                            <li class="nk-menu-item"><a href="subscription.html" class="nk-menu-link"><span
-                                            class="nk-menu-icon"><em class="icon ni ni-invest"></em></span><span
-                                            class="nk-menu-text">Subscription</span></a></li>
-                            <li class="nk-menu-item"><a href="notice-board.html" class="nk-menu-link"><span
-                                            class="nk-menu-icon"><em class="icon ni ni-notice"></em></span><span
-                                            class="nk-menu-text">Notice Board</span></a></li>
-                            <li class="nk-menu-item"><a href="support.html" class="nk-menu-link"><span
-                                            class="nk-menu-icon"><em
-                                                class="icon ni ni-chat-circle-fill"></em></span><span
-                                            class="nk-menu-text">Support</span></a></li>
-                            <li class="nk-menu-item"><a href="settings.html" class="nk-menu-link"><span
-                                            class="nk-menu-icon"><em
-                                                class="icon ni ni-setting-alt-fill"></em></span><span
-                                            class="nk-menu-text">Settings</span></a></li>
-                            <li class="nk-menu-heading">
-                                <h6 class="overline-title text-primary-alt">Return to</h6>
-                            </li>
-                            <li class="nk-menu-item"><a href="https://dashlite.net/demo1/index.html"
-                                                        class="nk-menu-link"><span class="nk-menu-icon"><em
-                                                class="icon ni ni-dashlite-alt"></em></span><span
-                                            class="nk-menu-text">Main Dashboard</span></a></li>
-                            <li class="nk-menu-item"><a href="https://dashlite.net/demo1/components.html"
-                                                        class="nk-menu-link"><span class="nk-menu-icon"><em
-                                                class="icon ni ni-layers-fill"></em></span><span
-                                            class="nk-menu-text">All Components</span></a></li>
                         </ul>
                     </div>
                 </div>
